added search for problems
