# api-gateway/pkg/api/routes/user.go
@@ -12,9 +12,15 @@ func SetupUserRoutes(e *echo.Group, authHandler handler.AuthHandler, userHandler
 	e.POST("/signup", authHandler.UserSignUp)
 	e.POST("/signin", authHandler.UserSignIn)
 	e.GET("/view", userHandler.ViewAllProblems)
+	// fmt.Println("here in user/")
+	// e.PATCH("/password")
+	userPanal := e.Group("/panal")
+	userPanal.Use(middleware.UserMiddleware)
+	{
+		// fmt.Println("here in panal/")
+		userPanal.PUT("/password", userHandler.ForgetPassword)
+	}
 
-	// e.POST("/logout", authHandler.UserLogout)
-	// userManagent := e.Group("/logout")
 	problem := e.Group("/problem")
 	problem.Use(middleware.UserMiddleware)
 
